# square_service

./: .gitignore  CMakeLists.txt  README.md  README.odt  package.xml
include/square_service/: client.hpp  service.hpp
src/: client.cpp  client_main.cpp  service.cpp  service_main.cpp
srv/: SquareInt.srv
